--- a/src/app/v2/modules/evaluaciones-proveedor/evaluaciones-proveedor.component.html
+++ b/src/app/v2/modules/evaluaciones-proveedor/evaluaciones-proveedor.component.html
@@ -110,7 +110,7 @@
         </a>
       </div>
       <div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
-        <img src="assets/hero.webp" alt="mockup" />
+        <img style="height: 352px" src="assets/hero.webp" alt="mockup" />
       </div>
     </div>
     <div
