--- a/src/app/v2/modules/login/login.component.html
+++ b/src/app/v2/modules/login/login.component.html
@@ -1,11 +1,16 @@
 <!-- login.component.html -->
-<div class="bg-gray-100 flex items-center justify-center h-screen">
-  <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-md">
-    <h2 class="text-2xl font-bold mb-6 text-center">Iniciar Sesión</h2>
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-      <!-- Email Field -->
-      <div class="mb-4">
-        <label for="email" class="block text-gray-700 font-semibold mb-2"
+<div class="flex items-center justify-center min-h-screen bg-dark">
+  <div class="bg-white rounded-lg shadow-lg p-8 w-full max-w-md">
+    <div class="text-center mb-6">
+      <!-- Logo y Nombre de la Empresa -->
+      <h2 class="text-2xl font-bold text-dark">NuevoLosLagos</h2>
+    </div>
+
+    <!-- Formulario -->
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="space-y-6">
+      <!-- Campo de Correo -->
+      <div>
+        <label for="email" class="block text-sm font-medium text-dark"
           >Correo</label
         >
         <input
@@ -13,7 +18,7 @@
           type="email"
           formControlName="email"
           required
-          class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring focus:border-blue-300"
+          class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary"
           placeholder="Ingresa tu correo electrónico"
         />
         <div
@@ -31,9 +36,9 @@
         </div>
       </div>
 
-      <!-- Password Field -->
-      <div class="mb-6">
-        <label for="password" class="block text-gray-700 font-semibold mb-2"
+      <!-- Campo de Contraseña -->
+      <div>
+        <label for="password" class="block text-sm font-medium text-dark"
           >Contraseña</label
         >
         <input
@@ -41,7 +46,7 @@
           type="password"
           formControlName="password"
           required
-          class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring focus:border-blue-300"
+          class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary"
           placeholder="Ingresa tu contraseña"
         />
         <div
@@ -55,70 +60,45 @@
             La contraseña es obligatoria.
           </div>
         </div>
-        <!-- Validation Badges -->
-        <div class="mt-4 grid grid-cols-2 gap-4">
-          <div class="flex items-center text-sm">
-            <span
-              class="w-4 h-4 inline-block rounded-full mr-2"
-              [ngClass]="hasLength ? 'bg-green-500' : 'bg-gray-300'"
-            ></span>
-            Al menos 8 caracteres
-          </div>
-          <div class="flex items-center text-sm">
-            <span
-              class="w-4 h-4 inline-block rounded-full mr-2"
-              [ngClass]="hasUppercase ? 'bg-green-500' : 'bg-gray-300'"
-            ></span>
-            Una letra mayúscula
-          </div>
-          <div class="flex items-center text-sm">
-            <span
-              class="w-4 h-4 inline-block rounded-full mr-2"
-              [ngClass]="hasSpecialChar ? 'bg-green-500' : 'bg-gray-300'"
-            ></span>
-            Un carácter especial
-          </div>
-          <div class="flex items-center text-sm">
-            <span
-              class="w-4 h-4 inline-block rounded-full mr-2"
-              [ngClass]="hasNumber ? 'bg-green-500' : 'bg-gray-300'"
-            ></span>
-            Un número
-          </div>
-        </div>
       </div>
 
-      <!-- Error Message -->
+      <!-- Mensaje de Error -->
       <div *ngIf="errorMessage" class="text-center text-sm text-red-600">
         {{ errorMessage }}
       </div>
 
-      <!-- Submit Button -->
-      <button
-        type="submit"
-        [disabled]="isLoading || !loginForm.valid"
-        class="w-full bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 focus:outline-none focus:ring"
-      >
-        Iniciar Sesión
-      </button>
-
-      <hr class="my-4 border-t border-gray-300 w-3/4 mx-auto" />
-
-      <!-- Additional Buttons -->
+      <!-- Botones -->
       <div class="flex flex-col space-y-4">
+        <!-- Botón de Acceso -->
+        <button
+          type="submit"
+          [disabled]="isLoading"
+          class="flex items-center bg-yellow-600 justify-center px-4 py-2 bg-primary text-white rounded-md hover:bg-gray-800 transition duration-300"
+        >
+          Acceder
+        </button>
+
+        <hr class="my-4 border-t border-gray-300 w-3/4 mx-auto" />
+
+        <!-- Botón de Crear Cuenta -->
         <a
           routerLink="/registro"
-          class="w-full text-center bg-gray-800 text-white py-2 px-4 rounded-lg hover:bg-yellow-600 transition duration-300"
+          class="flex items-center bg-gray-800 justify-center px-4 py-2 bg-primary text-white rounded-md hover:bg-yellow-600 transition duration-300"
         >
           Crear Cuenta
         </a>
+
+        <!-- Botón de Volver -->
         <a
           routerLink="/"
-          class="w-full text-center bg-white border border-gray-300 text-gray-900 py-2 px-4 rounded-lg hover:bg-gray-100 transition duration-300"
+          class="flex items-center bg-white-800 justify-center px-4 py-2 border border-gray-300 text-gray-900 rounded-md hover:bg-gray-100 transition duration-300"
         >
           Volver
         </a>
       </div>
+
+      <!-- Spinner de Carga -->
+      <div *ngIf="isLoading" class="flex justify-center mt-4"></div>
     </form>
   </div>
 </div>
