--- a/src/app/v2/modules/login/login.component.html
+++ b/src/app/v2/modules/login/login.component.html
@@ -36,14 +36,59 @@
         <label for="password" class="block text-gray-700 font-semibold mb-2"
           >Contraseña</label
         >
-        <input
-          id="password"
-          type="password"
-          formControlName="password"
-          required
-          class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring focus:border-blue-300"
-          placeholder="Ingresa tu contraseña"
-        />
+        <div class="relative">
+          <input
+            id="password"
+            [type]="isPasswordVisible ? 'text' : 'password'"
+            formControlName="password"
+            required
+            class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring focus:border-blue-300"
+            placeholder="Ingresa tu contraseña"
+          />
+          <button
+            type="button"
+            class="absolute inset-y-0 right-0 pr-3 flex items-center text-sm leading-5"
+            (click)="togglePasswordVisibility()"
+          >
+            <svg
+              [ngClass]="isPasswordVisible ? 'text-gray-700' : 'text-gray-500'"
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-5 w-5"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                *ngIf="isPasswordVisible"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
+              />
+              <path
+                *ngIf="isPasswordVisible"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M2.458 12C3.732 7.943 7.523 5 12 5c4.477 0 8.268 2.943 9.542 7-1.274 4.057-5.065 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"
+              />
+              <path
+                *ngIf="!isPasswordVisible"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M13.875 18.825A10.05 10.05 0 0112 19c-4.477 0-8.268-2.943-9.542-7a9.977 9.977 0 014.058-5.642M15 12a3 3 0 11-6 0 3 3 0 016 0z"
+              />
+              <path
+                *ngIf="!isPasswordVisible"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M3 3l18 18"
+              />
+            </svg>
+          </button>
+        </div>
         <div
           *ngIf="
             loginForm.get('password')?.touched &&
