--- a/src/app/v2/components/sugeridos/sugeridos.component.html
+++ b/src/app/v2/components/sugeridos/sugeridos.component.html
@@ -1,14 +1,10 @@
-<!--texto para cuentas sin ingreso-->
-@if (this.authState() === AuthState.LoggedOut || (this.authState() ===
-AuthState.LoggedIn && this.modeloMadurez() && !(ruta ==='buscador-cursos' ||
-ruta ==='buscador-proveedores')) ) {
-<h2 class="text-2xl font-bold mb-6">Últimas publicaciones</h2>
-}
-<!--texto para cuentas con ingreso empresa-->
-@if (this.authState() === AuthState.LoggedIn &&
-this.currentUser()?.rol?.nombreRol === Role.Empresa && this.modeloMadurez() &&
-(ruta ==='buscador-cursos' || ruta ==='buscador-proveedores')) {
+<!--texto para cuentas con ingreso empresa o proveedor-->
+@if (this.authState()===AuthState.LoggedIn && (this.modeloMadurez() ||
+this.modeloCaracter()) && (ruta === 'buscador-cursos' || ruta ===
+'buscador-proveedores')) {
 <h2 class="text-2xl font-bold mb-6">Según tu Modelo te recomendamos...</h2>
+} @else {
+<h2 class="text-2xl font-bold mb-6">Últimas publicaciones</h2>
 }
 
 <!-- Sección de artículos sugeridos -->
