mijas de pan, fotos equipo, limpieza de codigo

--- a/src/app/v2/modules/evaluaciones-madurez/evaluaciones-madurez.component.html
+++ b/src/app/v2/modules/evaluaciones-madurez/evaluaciones-madurez.component.html
@@ -1,3 +1,5 @@
+<!-- Migas de pan para navegación -->
+<app-breadcrumbs [breadcrumbs]="breadcrumbs"></app-breadcrumbs>
 <div>
   <!--Login como empresa y modelo completado-->
   @if (authState()===AuthState.LoggedIn && currentUser()?.rol?.nombreRol ===
