--- a/src/app/v2/components/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/v2/components/breadcrumbs/breadcrumbs.component.html
@@ -1,8 +1,8 @@
 <!-- breadcrumbs.component.html -->
 <div class="bg-gray-200 py-4 border-b-4 border-gray-200">
-  <div class="container mx-auto">
+  <div class="container mx-auto px-4 sm:px-6 lg:px-8">
     <nav class="flex" aria-label="Breadcrumb">
-      <ol class="inline-flex items-center space-x-1 md:space-x-3">
+      <ol class="inline-flex items-center flex-wrap space-x-1 sm:space-x-3">
         <li
           *ngFor="let breadcrumb of breadcrumbs; let last = last"
           class="inline-flex items-center"
@@ -11,10 +11,12 @@
           <ng-container *ngIf="!last; else lastBreadcrumb">
             <a
               [routerLink]="breadcrumb.url"
-              class="inline-flex items-center text-sm font-bold transition-colors duration-300 hover:text-gray-500"
+              class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-gray-500 transition-colors duration-300"
             >
               <!-- Icono de Inicio (solo para la primera miga de pan) -->
-              <ng-container *ngIf="breadcrumb.icon">
+              <ng-container
+                *ngIf="breadcrumb.icon && breadcrumbs.indexOf(breadcrumb) === 0"
+              >
                 <svg
                   class="w-5 h-5 mr-2"
                   fill="currentColor"
@@ -27,7 +29,7 @@
             </a>
             <!-- Separador -->
             <svg
-              class="w-5 h-5 text-gray-500 mx-2"
+              class="w-4 h-4 text-gray-500 mx-2 mt-1 sm:inline"
               fill="currentColor"
               viewBox="0 0 20 20"
             >
@@ -41,10 +43,12 @@
           <!-- Última miga de pan (actual) -->
           <ng-template #lastBreadcrumb>
             <span
-              class="text-sm font-bold text-gray-700 inline-flex items-center"
+              class="text-sm font-medium text-gray-700 inline-flex items-center"
             >
               <!-- Icono de Inicio (solo para la primera miga de pan) -->
-              <ng-container *ngIf="breadcrumb.icon">
+              <ng-container
+                *ngIf="breadcrumb.icon && breadcrumbs.indexOf(breadcrumb) === 0"
+              >
                 <svg
                   class="w-5 h-5 mr-2"
                   fill="currentColor"
