--- a/src/app/v2/modules/podcasts/podcasts.component.html
+++ b/src/app/v2/modules/podcasts/podcasts.component.html
@@ -1,80 +1,16 @@
 <!-- Migas de pan para navegación -->
-<div class="bg-gray-200 py-4 border-b-4 border-gray-200">
-  <div class="container mx-auto">
-    <nav class="flex" aria-label="Breadcrumb">
-      <ol class="inline-flex items-center space-x-1 md:space-x-3">
-        <!-- Primer segmento: enlace a la página de Inicio -->
-        <li class="inline-flex items-center">
-          <a
-            href="/"
-            class="inline-flex items-center text-sm font-bold transition-colors duration-300"
-          >
-            <!-- Icono de Inicio -->
-            <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 20 20">
-              <path d="M10 2L2 7h3v7h4v-5h2v5h4V7h3L10 2z"></path>
-            </svg>
-            Inicio
-          </a>
-        </li>
-        <!-- Iterar sobre los segmentos y generar enlaces acumulativos -->
-        <li key="0" class="flex items-center">
-          <!-- Separador de segmento -->
-          <svg
-            class="w-5 h-5 text-gray-500 mx-2"
-            fill="currentColor"
-            viewBox="0 0 20 20"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
-              clip-rule="evenodd"
-            ></path>
-          </svg>
-          <!-- Enlace al segmento con ruta acumulativa -->
-          <a
-            href="/"
-            class="text-sm font-bold transition-colors duration-300 hover:text-gray-500"
-          >
-            Investigacion
-          </a>
-        </li>
-        <li key="1" class="flex items-center">
-          <!-- Separador de segmento -->
-          <svg
-            class="w-5 h-5 text-gray-500 mx-2"
-            fill="currentColor"
-            viewBox="0 0 20 20"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
-              clip-rule="evenodd"
-            ></path>
-          </svg>
-          <!-- Enlace al segmento con ruta acumulativa -->
-          <a
-            href="/investigacion-podcasts"
-            class="text-sm font-bold transition-colors duration-300 hover:text-gray-500"
-          >
-            Podcast
-          </a>
-        </li>
-      </ol>
-    </nav>
-  </div>
-</div>
+<app-breadcrumbs [breadcrumbs]="breadcrumbs"></app-breadcrumbs>
 
 <!-- Header -->
 
 <!-- forked from: https://codepen.io/cuonoj/pen/JjPmMaB -->
-
 
 <!-- Contenido principal -->
 <main class="container mx-auto py-12 flex flex-col lg:flex-row">
   <!-- Sección de búsqueda y resultados -->
   <div class="w-full lg:w-3/4 pr8 p-8">
     <section class="mb-8">
-      <h1 class="text-4xl font-bold text-gray-800 mb-4 ">
+      <h1 class="text-4xl font-bold text-gray-800 mb-4">
         Bienvenidos a la sección de Podcasts de Nuevo Los Lagos
       </h1>
       <p class="text-gray-700 leading-relaxed mb-4 text-justify">
