--- a/src/app/v2/components/patrocinadores/patrocinadores.component.html
+++ b/src/app/v2/components/patrocinadores/patrocinadores.component.html
@@ -4,7 +4,7 @@
     <div class="flex flex-col items-center">
       <!-- Encabezado y descripción -->
       <div class="text-center">
-        <h2 class="text-3xl font-extrabold text-gray-800">Organización</h2>
+        <h2 class="text-3xl font-extrabold text-gray-800 mt-6">Organización</h2>
         <p class="mt-6 text-xl text-gray-600 max-w-3xl mx-auto">
           Nuevo Los Lagos es una colaboración entre la Universidad Santo Tomás,
           Asimet y Grupo Centinela, con financiamiento de Corfo Los Lagos.
@@ -12,12 +12,17 @@
       </div>
       <!-- Sección de logos de patrocinadores -->
       <div
-        class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-4 gap-12 "
+        class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-4 gap-12"
       >
-        <div class="flex items-center justify-center" key="Santo Tomás">
+        <div
+          style="max-height: 10rem"
+          class="flex items-center justify-center"
+          key="Santo Tomás"
+        >
           <img
             src="assets/logos/logo_santotomas.webp"
             alt="Santo Tomás"
+            style="max-height: 10rem"
             class="w-full max-w-xs h-auto object-contain"
             loading="lazy"
           />
@@ -26,6 +31,7 @@
           <img
             src="assets/logos/logo_asimet.webp"
             alt="Asimet"
+            style="max-height: 10rem"
             class="w-full max-w-xs h-auto object-contain"
             loading="lazy"
           />
@@ -34,6 +40,7 @@
           <img
             src="assets/logos/logo_centinela.png"
             alt="grupo-centinela"
+            style="max-height: 10rem"
             class="w-full max-w-xs h-auto object-contain"
             loading="lazy"
           />
@@ -42,6 +49,7 @@
           <img
             src="assets/logos/logo_corfo.webp"
             alt="Corfo"
+            style="max-height: 10rem"
             class="w-full max-w-xs h-auto object-contain"
             loading="lazy"
           />
