--- a/src/app/v2/components/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/v2/components/breadcrumbs/breadcrumbs.component.html
@@ -1,5 +1,5 @@
 <!-- breadcrumbs.component.html -->
-<div class="bg-gray-200 py-4 border-b-4 border-gray-200">
+<div class="bg-gray-200 py-4">
   <div class="container mx-auto px-4 sm:px-6 lg:px-8">
     <nav class="flex" aria-label="Breadcrumb">
       <ol class="inline-flex items-center flex-wrap space-x-1 sm:space-x-3">
