--- a/src/app/v2/modules/selection-register/selection-register.component.html
+++ b/src/app/v2/modules/selection-register/selection-register.component.html
@@ -1,5 +1,5 @@
-<div style="height: 100vh; align-content: center">
-  <ol class="grid md:grid-cols-3 p-6">
+<div style="align-content: center; min-height: 70vh">
+  <ol class="grid gap-4 md:grid-cols-3 p-6">
     <div
       routerLink="/registro-proveedor"
       class="group relative cursor-pointer overflow-hidden bg-white px-6 pt-10 pb-8 shadow-xl ring-1 ring-gray-900/5 transition-all duration-300 hover:-translate-y-1 hover:shadow-2xl sm:mx-auto sm:max-w-sm sm:rounded-lg sm:px-10"
