mejora mobile y css

--- a/src/app/v2/components/patrocinadores/patrocinadores.component.html
+++ b/src/app/v2/components/patrocinadores/patrocinadores.component.html
@@ -12,7 +12,7 @@
       </div>
       <!-- Sección de logos de patrocinadores -->
       <div
-        class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-4 gap-12"
+        class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-4 xl:grid-cols-4"
       >
         <div
           style="max-height: 10rem"
