--- a/src/app/v2/components/sugeridos/sugeridos.component.html
+++ b/src/app/v2/components/sugeridos/sugeridos.component.html
@@ -2,9 +2,9 @@
 @if (this.authState()===AuthState.LoggedIn && (this.modeloMadurez() ||
 this.modeloCaracter()) && (ruta === 'buscador-cursos' || ruta ===
 'buscador-proveedores')) {
-<h2 class="p-4 text-2xl font-bold mb-6">Según tu Modelo te recomendamos...</h2>
+<h2 class="p-4 text-2xl font-bold">Según tu Modelo te recomendamos...</h2>
 } @else {
-<h2 class="p-4 text-2xl font-bold mb-6">Últimas publicaciones</h2>
+<h2 class="p-4 text-2xl font-bold">Últimas publicaciones</h2>
 }
 
 <!-- Sección de artículos sugeridos -->
