--- a/src/app/v2/modules/form-register/form-register.component.html
+++ b/src/app/v2/modules/form-register/form-register.component.html
@@ -1,10 +1,10 @@
 <!-- form-register.component.html -->
 
 <div
-  style="padding: 0px; align-content: center; height: 100vh"
+  style="padding: 0px; align-content: center; min-height: 100vh"
   class="max-w-screen-lg mx-auto"
 >
-  <div class="grid grid-cols-1 md:grid-cols-12 border">
+  <div class="grid grid-cols-1 md:grid-cols-12">
     <div class="bg-gray-900 md:col-span-4 p-10 text-white">
       <p class="mt-4 text-sm leading-7 font-regular uppercase">
         Registro |
