--- a/src/app/v2/modules/login/login.component.html
+++ b/src/app/v2/modules/login/login.component.html
@@ -1,6 +1,9 @@
 <!-- login.component.html -->
-<div class="bg-gray-100 flex items-center justify-center h-screen">
-  <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-md">
+<div
+  style="min-height: 70vh"
+  class="bg-gray-100 flex items-center justify-center"
+>
+  <div class="bg-white p-8 shadow-md w-full max-w-md">
     <h2 class="text-2xl font-bold mb-6 text-center">Iniciar Sesión</h2>
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <!-- Email Field -->
@@ -101,7 +104,7 @@
           </div>
         </div>
         <!-- Validation Badges -->
-        <div class="mt-4 grid grid-cols-2 gap-4">
+        <div class="my-4 grid grid-cols-2 gap-4">
           <div class="flex items-center text-sm">
             <span
               class="w-4 h-4 inline-block rounded-full mr-2"
@@ -142,7 +145,7 @@
       <button
         type="submit"
         [disabled]="isLoading || !loginForm.valid"
-        class="w-full bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 focus:outline-none focus:ring"
+        class="w-full mt-4 bg-indigo-600 hover:bg-indigo-400 text-white py-2 px-4 rounded-lg hover:bg-blue-600 focus:outline-none focus:ring"
       >
         Iniciar Sesión
       </button>
