titulos, meta y arreglos resposivos

--- a/src/app/v2/modules/informe/informe.component.html
+++ b/src/app/v2/modules/informe/informe.component.html
@@ -151,7 +151,7 @@
     </section>
   </div>
   <!-- Sección de artículos sugeridos -->
-  <aside class="w-full lg:w-1/4 mt-12 lg:mt-0">
+  <aside>
     <app-sugeridos></app-sugeridos>
   </aside>
 </main>
