--- a/src/app/v2/modules/podcasts/podcasts.component.html
+++ b/src/app/v2/modules/podcasts/podcasts.component.html
@@ -93,7 +93,7 @@
     </section>
   </div>
   <!-- Sección de artículos sugeridos -->
-  <aside class="w-full lg:w-1/4 mt-12 lg:mt-0 pt-10">
+  <aside>
     <app-sugeridos></app-sugeridos>
   </aside>
 </main>
