--- a/src/app/v2/modules/resource-search/resource-search.component.html
+++ b/src/app/v2/modules/resource-search/resource-search.component.html
@@ -83,7 +83,7 @@
     </div>
   </div>
   <!-- Artículos sugeridos -->
-  <app-sugeridos></app-sugeridos>
+  <aside><app-sugeridos></app-sugeridos></aside>
 </main>
 
 <!-- Modales -->
