--- a/src/app/v2/components/sugeridos/sugeridos.component.html
+++ b/src/app/v2/components/sugeridos/sugeridos.component.html
@@ -2,14 +2,14 @@
 @if (this.authState()===AuthState.LoggedIn && (this.modeloMadurez() ||
 this.modeloCaracter()) && (ruta === 'buscador-cursos' || ruta ===
 'buscador-proveedores')) {
-<h2 class="p-4 text-2xl font-bold">Según tu Modelo te recomendamos...</h2>
+<h2 class="py-4 px-8 text-2xl font-bold">Según tu Modelo te recomendamos...</h2>
 } @else {
-<h2 class="p-4 text-2xl font-bold">Últimas publicaciones</h2>
+<h2 class="py-4 px-8 text-2xl font-bold">Últimas publicaciones</h2>
 }
 
 <!-- Sección de artículos sugeridos -->
 <div
-  class="space-y-6 p-4 animate-fade-in"
+  class="space-y-6 py-4 px-8 animate-fade-in"
   style="min-height: 50vh; max-width: 500px"
 >
   @if (!sugeridos.length) {
