--- a/src/app/v2/modules/proyecto-equipo/proyecto-equipo.component.html
+++ b/src/app/v2/modules/proyecto-equipo/proyecto-equipo.component.html
@@ -8,7 +8,9 @@
     <!-- Espacio para contenido dinámico -->
     <section id="our-team" class="">
       <div class="container mx-auto px-4">
-        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
+        <div
+          class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-4 gap-8"
+        >
           @for (item of equipo; track $index) {
           <div class="bg-white p-6 my-6 text-center">
             <img
@@ -26,7 +28,7 @@
     </section>
   </div>
   <!-- Sección de artículos sugeridos -->
-  <aside class="w-full lg:w-1/4 mt-12 lg:mt-0">
+  <aside>
     <app-sugeridos></app-sugeridos>
   </aside>
 </main>
