--- a/src/app/v2/modules/form-register/form-register.component.html
+++ b/src/app/v2/modules/form-register/form-register.component.html
@@ -260,7 +260,7 @@
         </button>
         <button
           style="margin-left: auto; cursor: pointer"
-          class="shadow bg-indigo-600 hover:bg-indigo-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-6 rounded"
+          class="text-center bg-gray-800 text-white py-2 px-4 rounded-lg hover:bg-yellow-600 transition duration-300"
           type="submit"
           [disabled]="formGroup.invalid"
         >
