--- a/src/app/v2/modules/login/login.component.html
+++ b/src/app/v2/modules/login/login.component.html
@@ -145,7 +145,7 @@
       <button
         type="submit"
         [disabled]="isLoading || !loginForm.valid"
-        class="w-full mt-4 bg-indigo-600 hover:bg-indigo-400 text-white py-2 px-4 rounded-lg hover:bg-blue-600 focus:outline-none focus:ring"
+        class="w-full text-center bg-gray-800 text-white py-2 px-4 rounded-lg hover:bg-yellow-600 transition duration-300"
       >
         Iniciar Sesión
       </button>
@@ -156,7 +156,7 @@
       <div class="flex flex-col space-y-4">
         <a
           routerLink="/registro"
-          class="w-full text-center bg-gray-800 text-white py-2 px-4 rounded-lg hover:bg-yellow-600 transition duration-300"
+          class="w-full text-center mt-4 bg-indigo-600 hover:bg-indigo-400 text-white py-2 px-4 rounded-lg hover:bg-blue-600 focus:outline-none focus:ring"
         >
           Crear Cuenta
         </a>
